make changes to css in footer to prevent cut off

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,10 +3,10 @@ p {
 }
 
 .footer {
-  margin: 5vh;
+  margin: 10px;
   bottom: 5vh;
   width: 100%;
-  height: 2.5rem; /* Footer height */
+  height: fit-content; /* Footer height */
 }
 
 .footer-item {
